import org.gradle.kotlin.dsl.java
import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
	java
	id("com.github.johnrengelman.shadow") version "8.1.1"
	id("fabric-loom") version "1.7-SNAPSHOT"
	id("maven-publish")
}

base.archivesName.set(project.property("archives_base_name") as String)
version = project.property("mod_version") as String
group = project.property("maven_group") as String

repositories {
	maven("https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1")
	maven {
		url = uri("https://oss.sonatype.org/content/repositories/snapshots/")
	}
}

val shadowOnly by configurations.creating

dependencies {
	"minecraft"("com.mojang:minecraft:${project.property("minecraft_version")}")
	"mappings"("net.fabricmc:yarn:${project.property("yarn_mappings")}:v2")
	"modImplementation"("net.fabricmc:fabric-loader:${project.property("loader_version")}")
	"modImplementation"("net.fabricmc.fabric-api:fabric-api:${project.property("fabric_version")}")
	modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.1")
	implementation("uk.co.caprica:vlcj:5.0.0-SNAPSHOT")
	shadowOnly("uk.co.caprica:vlcj:5.0.0-SNAPSHOT")
}

tasks.runClient {
	jvmArgs("-Ddevauth.enabled=true")
}

tasks.processResources {
	inputs.property("version", project.version)

	filesMatching("fabric.mod.json") {
		expand(mapOf("version" to project.version))
	}

	filesMatching("cinemamod.mixins.json") {
		expand(project.properties)
	}
}

tasks.shadowJar {
	archiveClassifier.set("universal")
	configurations = listOf(shadowOnly)
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType<JavaCompile>().configureEach {
	options.release.set(21)
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

tasks.jar {
	from("LICENSE") {
		rename { "${it}_${base.archivesName.get()}" }
	}
}

publishing {
	publications {
		create<MavenPublication>("mavenJava") {
			from(components["java"])
		}
	}

	repositories {
		// Define your Maven publishing destinations here
	}
}

